// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component matches snapshot (disabled) 1`] = `
<div
  className="fdsCheckable--disabled fdsCheckable fdsCheckbox"
>
  <input
    className="media--xs"
    disabled={true}
    id="mock-universal-unique-identifier"
    name="snapshot_checkbox"
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <CheckFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Checkbox component matches snapshot (with label) 1`] = `
<div
  className="fdsCheckable fdsCheckbox"
>
  <input
    className="media--xs"
    disabled={false}
    id="mock-universal-unique-identifier"
    name="snapshot_checkbox"
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <CheckFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Checkbox component matches snapshot (without label) 1`] = `
<div
  className="fdsCheckable fdsCheckbox"
>
  <input
    className="media--xs"
    disabled={false}
    id="mock-universal-unique-identifier"
    name="snapshot_checkbox"
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="mock-universal-unique-identifier"
  >
    <span
      className="fdsCheckable-icon--checked"
    >
      <CheckFilledIcon
        size="xs"
      />
    </span>
    <span
      className="fdsCheckable-icon--unchecked"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </span>
  </label>
</div>
`;
